FirstProject/build/log/idf_py_stdout_output_20236
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.1.4\workspace\FirstProject\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.1.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Espressif/frameworks/esp-idf-v5.1.4/workspace/FirstProject/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Espressif/frameworks/esp-idf-v5.1.4/workspace/FirstProject/build/config -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/arch/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1.4/workspace/FirstProject=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1.4=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Espressif/frameworks/esp-idf-v5.1.4/workspace/FirstProject/main/main.c
C:/Espressif/frameworks/esp-idf-v5.1.4/workspace/FirstProject/main/main.c: In function 'app_main':
C:/Espressif/frameworks/esp-idf-v5.1.4/workspace/FirstProject/main/main.c:78:5: error: implicit declaration of function 'delay' [-Werror=implicit-function-declaration]
   78 |     delay(10000);
      |     ^~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
